# purple-signald

./: .gitignore  .gitmodules  CMakeLists.txt  HOWTO.md  Makefile  README.md  attachments.c  attachments.h  comms.c  comms.h  contacts.c  contacts.h  direct.c  direct.h  glib_compat.h  groups.c  groups.h  libdiscord.c  libpipe.c  libsignald.c  libsignald.h  link.c  link.h  login.c  message.c  message.h  pragma.h  purple_compat.h  signald_procmgmt.c  signald_procmgmt.h  state.c  state.h
dependencies/win32/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  admin.c  admin.h  attachments.c  attachments.h  comms.c  comms.h  contacts.c  contacts.h  defines.h  direct.c  groups.c  groups.h  input.c  input.h  interface.c  interface.h  json-utils.h  json_compat.h  libsignald.c  libsignald.h  link.c  link.h  login.c  login.h  message.c  message.h  options.c  options.h  purple_compat.h  receipt.c  receipt.h  reply.c  reply.h  signald_procmgmt.c  signald_procmgmt.h  status.c  status.h  structs.h
src/purple-3/: compat.h  prpl.c  prpl.h
